--- a/Ex05_MotionTracking/app/src/main/AndroidManifest.xml
+++ b/Ex05_MotionTracking/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="ex04_pointcloud"
+        android:label="ex05_motiontracking"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ex05_MotionTracking">
